# 12v-Gatedhouse-lib

./: .gitignore  LICENSE  MULTI_LANGUAGE_STRATEGY.md  README.md  SKILLS.md
.github/workflows/: release.yml
sdk-java/: pom.xml  sample-web.xml
sdk-java/src/main/java/com/twelvevectors/gatedhouse/: AuthenticatedSubject.java  Database.java  DefaultGatedhouse.java  DefaultGroupManager.java  DefaultMembershipManager.java  DefaultPermissionCatalog.java  DefaultRoleManager.java  EffectivePermission.java  EntityType.java  GatedContext.java  Gatedhouse.java  GatedhouseApiFilter.java  GatedhouseConfig.java  GatedhouseDatabaseException.java  GatedhouseFactory.java  GatedhouseInitializationException.java  GatedhouseWebFilter.java  GroupManager.java  GroupSource.java  InMemoryPermissionCache.java  JCachePermissionCache.java  JustTokenVerifierGatedhouse.java  JwtVerification.java  LocalGroupSource.java  LoginCsrfException.java  LoginFlow.java  MembershipManager.java  MembershipStatus.java  Migrator.java  PermissionCache.java  PermissionCacheKey.java  PermissionCatalog.java  RoleManager.java  SchemaCheck.java  SchemaNotInitializedException.java  SchemaOutOfDateException.java  SecureUrls.java  SphinxClient.java  TokenVerificationException.java  TokenVerifierConfig.java
sdk-java/src/test/java/com/twelvevectors/gatedhouse/: InMemoryPermissionCacheTest.java  (+4 more)
sdk-python/: conformance.py  pyproject.toml
sdk-python/gatedhouse/: __init__.py  _config.py  _database.py  _enums.py  _exceptions.py  _factory.py  _gated_context.py  _gatedhouse.py  _group_manager.py  _group_source.py  _jwt_verification.py  _login_flow.py  _membership_manager.py  _migrator.py  _permission_cache.py  _permission_catalog.py  _role_manager.py  _schema_check.py  _secure_urls.py  _sphinx_client.py  _token_verifier_config.py  _token_verifier_gatedhouse.py  _types.py  _web.py  asgi.py  gatedhouse.py
sdk-python/gatedhouse/admin/: router.py
sdk-python/gatedhouse/audit/: logger.py
sdk-python/gatedhouse/cli/: __init__.py  migrate.py  smoke_test.py
sdk-python/gatedhouse/core/: config.py  types.py
sdk-python/gatedhouse/core/delegation/: cache.py  resolver.py
sdk-python/gatedhouse/core/membership/: cache.py  resolver.py
sdk-python/gatedhouse/core/permissions/: checker.py  matcher.py
sdk-python/gatedhouse/core/policies/: engine.py
sdk-python/gatedhouse/core/roles/: assignment.py  repository.py  resolver.py
sdk-python/gatedhouse/database/: connection.py  migrations.py
sdk-python/gatedhouse/events/: adapters.py  handler.py  types.py
sdk-python/gatedhouse/jwt/: jwks.py  verifier.py
sdk-python/gatedhouse/metrics/: collector.py
sdk-python/gatedhouse/middleware/: django.py  fastapi.py
sdk-python/tests/: test_asgi.py  test_auth_flows.py  test_web_sphinx.py
sdk-python/tests/unit/: test_checker.py  test_config.py  test_matcher.py  test_policy_engine.py
sdk-rust/: Cargo.toml
sdk-rust/src/: config.rs  conformance.rs  database.rs  enums.rs  error.rs  factory.rs  filters.rs  gated_context.rs  gatedhouse.rs  group_manager.rs  group_source.rs  just_token_verifier.rs  jwt_verification.rs  lib.rs  login_flow.rs  membership_manager.rs  migrator.rs  permission_cache.rs  permission_catalog.rs  role_manager.rs  schema_check.rs  secure_urls.rs  sphinx_client.rs  token_verifier.rs  types.rs
sdk-rust/src/admin/: mod.rs
sdk-rust/src/audit/: mod.rs
sdk-rust/src/cli/: mod.rs
sdk-rust/src/database/: connection.rs  migrations.rs  mod.rs
sdk-rust/src/delegation/: cache.rs  resolver.rs
sdk-rust/src/events/: adapters.rs  handler.rs  mod.rs  types.rs
sdk-rust/src/jwt/: mod.rs
sdk-rust/src/membership/: cache.rs  resolver.rs
sdk-rust/src/metrics/: mod.rs
sdk-rust/src/middleware/: mod.rs
sdk-rust/src/permissions/: checker.rs  matcher.rs  mod.rs  registry.rs
sdk-rust/src/policies/: mod.rs
sdk-rust/src/roles/: assignment.rs  mod.rs  repository.rs  resolver.rs
sdk-rust/tests/: auth_flows.rs  web_sphinx.rs
sdk-typescript/: .eslintrc.json  jest.config.ts  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
sdk-typescript/sql/migrations/: 001_initial_schema.sql
sdk-typescript/sql/queries/: assignments.sql  roles.sql
sdk-typescript/src/: config.ts  conformance.ts  gatedhouse.ts  index.ts  types.ts
sdk-typescript/src/admin/: router.ts
sdk-typescript/src/audit/: index.ts  logger.ts
sdk-typescript/src/cli/: migrate.ts
sdk-typescript/src/database/: connection.ts  index.ts  migrations.ts
sdk-typescript/src/delegation/: cache.ts  resolver.ts
sdk-typescript/src/events/: handler.ts  index.ts  types.ts
sdk-typescript/src/events/adapters/: in-memory.ts  index.ts  noop.ts
sdk-typescript/src/jwt/: index.ts  verifier.ts
sdk-typescript/src/membership/: resolver.ts
sdk-typescript/src/metrics/: collector.ts  index.ts
sdk-typescript/src/middleware/: guards.ts
sdk-typescript/src/permissions/: checker.ts  index.ts  registry.ts
sdk-typescript/src/policies/: engine.ts
sdk-typescript/src/roles/: assignment.ts  index.ts  repository.ts  resolver.ts
sdk-typescript/tests/unit/: config.test.ts
sdk-typescript/tests/unit/delegation/: resolver.test.ts
sdk-typescript/tests/unit/membership/: resolver.test.ts
sdk-typescript/tests/unit/permissions/: checker.test.ts  matcher.test.ts
spec/codegen/: generate.py  requirements.txt
spec/schemas/: config.json  delegation.json  events_catalog.json  events_schema.json  gated_context.json  identity.json  membership.json  role_definition.json
spec/sql/migrations/: 001_initial_schema_down.sql
spec/sql/queries/: delegation_cache.sql  membership_cache.sql  resolved_permissions.sql
spec/test-vectors/: has_all_permissions.json  has_any_permission.json  has_permission.json  intersect_permissions.json  permission_check.json  permission_matching.json  role_dag_resolution.json
src/: logger.ts
src/admin/: index.ts
src/delegation/: index.ts
src/jwt/: jwks.ts
src/membership/: cache.ts  index.ts
src/middleware/: express.ts  index.ts
src/permissions/: matcher.ts
tests/unit/policies/: engine.test.ts
tools/: conformance_runner.py
(+3 files in other folders)
