[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gatedhouse"
version = "0.1.0"
description = "Gatedhouse authorization library for the SuperAgent Platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.29.0",
    "PyJWT[crypto]>=2.8.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.109.0", "starlette>=0.36.0"]
django = ["django>=4.2"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8",
    "ruff>=0.2.0",
]

[project.scripts]
gatedhouse-migrate = "gatedhouse.cli.migrate:main"

[tool.setuptools.packages.find]
include = ["gatedhouse*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
