[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gatedhouse"
version = "0.1.0"
description = "Embedded authorization library — Python SDK"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    # Postgres driver. Library code only references DB-API/psycopg public types.
    "psycopg[binary]>=3.1",
    # JWT verification (RS256 + JWKS). Stdlib has no JWT support.
    "PyJWT[crypto]>=2.8",
]

[project.scripts]
gatedhouse-migrate = "gatedhouse.cli.migrate:main"
gatedhouse-smoketest = "gatedhouse.cli.smoke_test:main"

[tool.hatch.build.targets.wheel]
packages = ["gatedhouse"]

[tool.hatch.build.targets.wheel.force-include]
"gatedhouse/migrations/V001__init.sql" = "gatedhouse/migrations/V001__init.sql"
"gatedhouse/migrations/migrations.txt" = "gatedhouse/migrations/migrations.txt"
