[package]
name = "gatedhouse"
version = "0.1.0"
edition = "2021"
description = "Gatedhouse authorization library for the SuperAgent Platform"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json"], optional = true }
jsonwebtoken = { version = "9", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
axum = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }
tracing = "0.1"
thiserror = "2"
async-trait = "0.1"

[features]
default = ["database", "jwt", "web"]
database = ["dep:sqlx"]
jwt = ["dep:jsonwebtoken", "dep:reqwest"]
web = ["dep:axum", "dep:tower"]

[[bin]]
name = "gatedhouse-conformance"
path = "src/conformance.rs"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
