[package]
name = "gatedhouse"
version = "0.1.0"
edition = "2021"
description = "Embedded authorization library — Rust SDK"
license = "MIT"
rust-version = "1.74"

[dependencies]
# Postgres driver (sync; matches Java/Python SDKs which are sync).
# `with-uuid-1` enables `Uuid: ToSql` so we can bind library-generated UUIDs.
postgres = { version = "0.19", features = ["with-uuid-1"] }

# UUID generation for library-owned PKs.
uuid = { version = "1", features = ["v4"] }

# JWT verification (RS256 + JWK parsing). Rust has no JWT in stdlib.
jsonwebtoken = "9"

# Sync HTTP client used to fetch JWKS and call Sphinx's OAuth token endpoints.
ureq = { version = "2", default-features = false, features = ["tls", "json"] }

# JSON parsing for JWKS responses and JWT custom claims.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto for the PKCE hosted-login flow (LoginFlow): HMAC-SHA256 for the
# browser-bound cookie, SHA-256 for the S256 challenge, a CSPRNG for the
# verifier, and a constant-time compare. Already compiled in the tree (this is
# the same crypto jsonwebtoken uses to verify RS256), so no new build cost.
ring = "0.17"

[[bin]]
name = "gatedhouse-migrate"
path = "src/bin/migrate.rs"

[[bin]]
name = "gatedhouse-smoke-test"
path = "src/bin/smoke_test.rs"
