[package]
name = "gatedhouse"
version = "0.2.0"
edition = "2021"
description = "Embedded authorization library — Rust SDK"
license = "MIT"
repository = "https://github.com/12vectors/12v-Gatedhouse-lib"
keywords = ["authorization", "rbac", "permissions", "postgres", "jwt"]
categories = ["authentication"]
rust-version = "1.74"

[dependencies]
# Postgres driver (sync; matches Java/Python SDKs which are sync).
# `with-uuid-1` enables `Uuid: ToSql` so we can bind library-generated UUIDs.
postgres = { version = "0.19", features = ["with-uuid-1"] }

# UUID generation for library-owned PKs.
uuid = { version = "1", features = ["v4"] }

# JWT verification (RS256 + JWK parsing). Rust has no JWT in stdlib.
jsonwebtoken = "9"

# Sync HTTP client used solely to fetch JWKS. Rust stdlib has no HTTP.
ureq = { version = "2", default-features = false, features = ["tls", "json"] }

# JSON parsing for JWKS responses and JWT custom claims.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "gatedhouse-migrate"
path = "src/bin/migrate.rs"

[[bin]]
name = "gatedhouse-smoke-test"
path = "src/bin/smoke_test.rs"
